# voice_ass

./: CMakeLists.txt  readme.md
config/: config.yaml
scripts/: export_cosyvoice2_to_onnx.py  export_llm_to_onnx.py  test_export.sh
src/: main.cpp
src/asr/: asr_engine.cpp  asr_engine.cpp.backup  asr_engine.h  asr_engine.h.backup
src/audio/: audio_input.cpp  audio_input.h  audio_output.cpp  audio_output.h  vad_detector.cpp  vad_detector.h
src/query/: llm_client.cpp  llm_client.h  query_engine.cpp  query_engine.h  sqlite_db.cpp  sqlite_db.h
src/tts/: CMakeLists.txt  README_COSYVOICE2.md  cosyvoice2_engine.cpp  cosyvoice2_engine.h  llm_inference.cpp  llm_inference.h  test_cosyvoice2.cpp  text_frontend.cpp  text_frontend.h  tts_engine.cpp  tts_engine.h
src/utils/: AudioTransform.cpp  AudioTransform.h  config.cpp  config.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
test/: CMakeLists.txt  test_asr_engine.cpp  test_audio_asr_pipeline.cpp  test_audio_input.cpp  test_full_pipeline.cpp  test_llm_client.cpp  test_query_engine.cpp  test_sqlite_db.cpp  test_vad.cpp
